<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
    <data>
        <variable
            name="firstViewModel"
            type="com.example.calculatorexercise.viewModel.FirstNumberViewModel" />
    </data>
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        tools:context=".ui.FirstNumberFragment">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#EF6C00"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.115" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_first_number"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNumber1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.702" />

        <EditText
            android:id="@+id/editTextNumber1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_number_label"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="#E6BC40"
            android:textColorHint="#E6BC40"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/operationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintVertical_bias="0.892" />

        <Button
            android:id="@+id/operationButton"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:text="@string/label_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintVertical_bias="0.713" />
        <!--android:onClick="@{ ()-> firstViewModel.onClickNextButton() }"-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="172dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/big_chungus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:contentDescription="@string/image_first" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>